--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "http-project-evp",
   "version": "1.0.0",
   "description": "Http Laborprojekt Timo, Linas, Paul",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.21.2"
+  }
 }
